--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html> 
 
-    <head>
-        <link rel="stylesheet" href="style.css">
-    </head>
+<html>
 
-    <body>
-        <div class="container external internal" id="content">
-            <div class="row">
-                <div class="col">1 of 2</div>
-                <div class="col">2 of 2</div>
-            </div>
-        </div>
-    </body>
+	<head>
+		<meta charset="utf-8">
+		<title>Amazing title :p</title>
+		<link href="index.css" rel="stylesheet" type="text/css">
+	</head>
+
+	<body>
+		<div class="MAIN">
+		</div>
+	</body>
 
 </html>
