--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 
 <html>
-
+	
 	<head>
-		<meta charset="utf-8">
-		<title>Amazing title :p</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
+		<title>Amazing titlee :p</title>
 		<link href="index.css" rel="stylesheet" type="text/css">
 	</head>
-
+	
 	<body>
-		<div class="MAIN">
-		</div>
+		<div class="line-1"> very amazing text innit</div>
+		<!-- <img src="assets/images/IndexBackground.png" class="MAIN"> -->
+		
+		<div class="TEXT" id="TEXT"> very amazing text innit</div>
+		<script type="text/javascript" src="html.js"></script>
 	</body>
-
+	
+	
 </html>
