--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 	</head>
 	
 	<body>
-		<div class="line-1"> very amazing text innit</div>
+		<div class="line-1">
+			Sadly a one time animation 😒<br>
+			but hey!<br>
+			it can do more than one line!</div>
 		<!-- <img src="assets/images/IndexBackground.png" class="MAIN"> -->
 		
 		<div class="TEXT" id="TEXT"> very amazing text innit</div>
