Making it pretty
+ Background image (in use)
+ Nicer text
+ Smoother resizing

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 	</head>
 	
 	<body>
-		<div class="line-1">
-			Sadly a one time animation 😒<br>
-			but hey!<br>
-			it can do more than one line!</div>
-		<!-- <img src="assets/images/IndexBackground.png" class="MAIN"> -->
-		
-		<div class="TEXT" id="TEXT"> very amazing text innit</div>
+		<div class="MAIN">
+			<div class="MagicText">
+				Sadly a one time animation 😒<br>
+				but hey!<br>
+				it can do more than one line!</div>
+			
+			<div class="TEXT" id="TEXT"> very amazing text innit</div>
+		</div>
 		<script type="text/javascript" src="html.js"></script>
 	</body>
 	
