--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				but hey!<br>
 				it can do more than one line!</div>		
 			<div class="TEXT" id="TEXT"> very amazing text innit</div>
-		
+			<a href="html2.html"><div class="LILBOTON">{ Real.Website }</div></a>
 		</div>
 		<script type="text/javascript" src="html.js"></script>
 	
